# tdxquant-mcp

./: .gitignore  mcp.json  pyproject.toml  requirements.txt  server.py
