[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdxquant-mcp"
version = "1.0.0"
description = "TDXQuant MCP Server - 通达信量化接口 MCP 服务器"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HONY1233"},
]
keywords = ["tdxquant", "easy_tdx", "mcp", "fastmcp", "A股", "通达信", "量化"]

dependencies = [
    "easy_tdx>=1.20.0",
    "fastmcp>=3.0.0",
    "pandas>=2.0.0",
]

[project.urls]
Repository = "https://github.com/HONY1233/tdxquant-mcp"

[tool.setuptools]
py-modules = ["server"]
